--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -354,7 +354,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                     </div>
                     <a id="beingEnoughBtn" class="btn-dark-pink sign-me-up-btn bg-blue" href="" target="_blank">Book your spot!</a>
                 </form>
-                <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice</a></p>
+                <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice.</a> Being Enough Program <a href="src/site/being-enough-terms.njk" target="_blank"> Ts & Cs</a></p>
             </div>    
         </div>
     </section>
