--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -63,9 +63,9 @@
                 <div class="dropdown">
                     <a href="#" class="dropdown-toggle nav-item rob-font" data-toggle="dropdown">Events</a>
                     <div class="dropdown-menu nav-item rob-font">
-                        <div class="dropdown-item">
+                        {# <div class="dropdown-item">
                             <a href="/being-enough" class="">Being Enough Group <br class="d-lg-none">Program</a>
-                        </div>
+                        </div> #}
                         <div class="dropdown-item">
                             <a href="/confidence-collective-workshop" class="">Confidence Collective <br class="d-lg-none"> Workshop</a>
                         </div>
