Add new packages

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -131,61 +131,17 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
             <div class="coaching-package-item">
                 <div class="signature-includes">
                     <h2 class="sect-title fw-n signature-title italic">
-                        Swift
-                    </h2>
-                    <p class="normal-text coaching-package-intro">
-                        Want to make valuable changes fast? This one's for you. DISC personality profiling will help you discover how best to approach your personal roadblocks, and the most effective approach for quick, powerful results.
-                    </p>
-                    <figure class="includes-fig">
-                        <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
-                        <ul class="includes-list">
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                Online assessment
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                DISC personality profile session
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                <span>Personal growth exercise</span>
-                                
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                Follow-up and consolidation 30 minute coaching session
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                15-page bespoke report tailored completely to you.
-                            </li>
-                        </ul>
-                    </figure>
-                    <div class="package-price">
-                        <p class="normal-text">Investment: £155 (Value £265)</p>
-                    </div>
-                </div>
-            </div>
-            <hr class="half-width-hr d-md-none">
-            <div class="coaching-package-item">
-                <div class="signature-includes">
-                    <h2 class="sect-title fw-n signature-title italic">
                         signature
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        Need help uncovering the roadblocks in your path to happiness? Signature has your name written all over it. This voyage of discovery will help you identify where you are, so you can get to exactly where you want to be.   
+                        Need help uncovering and navigating particular roadblocks in your path to happiness? Signature has your name written all over it. This 3-4 month voyage of self-discovery will help you identify where you are, so you can get to exactly where you want to be.   
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                DISC personality profiling session
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                45 min Discovery Session 
+                                1.5 hr in depth Discovery Session
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
@@ -197,17 +153,17 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                WhatsApp contact (3 * per week)
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                Access to free resources
+                                WhatsApp contact
                             </li>
                         </ul>
+                        <div class="package-price">
+                            <p class="normal-text">Investment: 4 monthly payments of £200</p>
+                        </div>
+                        <div class="package-price">
+                            <div class="sect-subtitle how-sub text-left">Bonus:</div>
+                            <p class="normal-text">Instant access to an incredible Confidence Training when you pay in full </p>
+                        </div>
                     </figure>
-                    <div class="package-price">
-                        <p class="normal-text">Investment: £595 (Value £1075)</p>
-                    </div>
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
@@ -217,44 +173,40 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
                         Shift
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        If personal metamorphosis were a coaching program, this would be it! We take a deep and enlightening three step journey through self discovery, self release and self direction. Want to live a life without limits? Make the shift. 
+                        If personal metamorphosis were a coaching program, this would be it! We take a deep and enlightening 5-6 month journey through self-awareness, self-trust and self-direction. Want to live a life without limits? Make the shift.
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                DISC personality profiling session
+                                In person Breakthrough Day (Deluxe meals and refreshments included) 
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                1hr min Discovery Session
+                                1.5hr DISC personality profiling session
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                10 * 1.5 hr sessions
+                                6 * 1.5 hr sessions
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Unlimited Personal Development Exercises
+                                Direct WhatsApp contact with me throughout your program
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Unlimited WhatsApp contact
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                Access to free resources
-                            </li>
-                            <li class="includes-list-item normal-text">
-                                <i class="fas fa-check-square"></i>
-                                Monthly creation of bespoke resources
+                                Personal Development Exercises
                             </li>
                         </ul>
+                        <div class="package-price">
+                            <p class="normal-text">Investment: 8 monthly payments of £400</p>
+                        </div>
+                        <div class="package-price">
+                            <div class="sect-subtitle how-sub text-left">Bonus:</div>
+                            <p class="normal-text">Instant access to Being Enough a 6-part program which includes a beautiful Sound Wisdom healing session.</p>
+                        </div>
                     </figure>
-                    <div class="package-price">
-                        <p class="normal-text">Investment: £1100 (Value £2185)</p>
-                    </div>
                 </div>
             </div>
         </div>
