Add Swift back in

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -128,6 +128,46 @@ metaDescription: 'Accredited Transformational Coach helping you overcome stress,
         </h3>
          <hr class="half-width-hr">
         <div class="signature-content">
+        <div class="coaching-package-item">
+            <div class="signature-includes">
+                <h2 class="sect-title fw-n signature-title italic">
+                    Swift
+                </h2>
+                <p class="normal-text coaching-package-intro">
+                    Want to make valuable changes fast? This one's for you. DISC personality profiling will help you discover how best to approach your personal roadblocks, and the most effective approach for quick, powerful results.
+                </p>
+                <figure class="includes-fig">
+                    <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
+                    <ul class="includes-list">
+                        <li class="includes-list-item normal-text">
+                            <i class="fas fa-check-square"></i>
+                            Online assessment
+                        </li>
+                        <li class="includes-list-item normal-text">
+                            <i class="fas fa-check-square"></i>
+                            DISC personality profile session
+                        </li>
+                        <li class="includes-list-item normal-text">
+                            <i class="fas fa-check-square"></i>
+                            <span>Personal growth exercise</span>
+                            
+                        </li>
+                        <li class="includes-list-item normal-text">
+                            <i class="fas fa-check-square"></i>
+                            Follow-up and consolidation 30 minute coaching session
+                        </li>
+                        <li class="includes-list-item normal-text">
+                            <i class="fas fa-check-square"></i>
+                            15-page bespoke report tailored completely to you.
+                        </li>
+                    </ul>
+                </figure>
+                <div class="package-price">
+                    <p class="normal-text">Investment: £199</p>
+                </div>
+            </div>
+        </div>
+        <hr class="half-width-hr d-md-none">
             <div class="coaching-package-item">
                 <div class="signature-includes">
                     <h2 class="sect-title fw-n signature-title italic">
