Add edits for limitless abundance

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -7,11 +7,11 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
 ---
 
     <!-- Parralex hero section -->
-    <section class="testimonial-hero-container cc-workshop-hero">
+    <section class="testimonial-hero-container la-workshop-hero">
         <div class="parallax-container contact-hero-parallax-window"></div>
         <div class="right-hero-text">
-            <h1 class="sect-title">LIMITLESS ABUNDANCE in career and business</h1>
-            <h2 class="sect-subtitle">With Mhairi Todd</h2>
+            <h1 class="sect-title">LIMITLESS ABUNDANCE</h1>
+            <h2 class="sect-subtitle">In career and business with Mhairi Todd</h2>
         </div>
     </section>
     <!-- END: parralex hero section -->
@@ -45,6 +45,14 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 </h4>
                 <p class="normal-text">
                     Online via unique weblink
+                </p>
+            </div>
+            <div class="ceremony-what-item">
+                <h4 class="sect-subtitle pink-text fw-b">
+                    Tickets
+                </h4>
+                <p class="normal-text">
+                    £15 pp
                 </p>
             </div>
         </div>
@@ -88,7 +96,7 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 </ul>
             </div>
             <p class="normal-text">
-                Sounds good?<span class="fw-b">It will be!</span> 
+                Sounds good?<span class="fw-b"> It will be!</span> 
             </p>
         </div>
         <div class="about-cta-btn">
