Add la workshop snipcart btn

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -101,12 +101,12 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#WS1"
+                data-item-id="#WS3"
                 data-item-price="15"
-                data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop - Replay"
+                data-item-url="/business-workshops/limitless-abundance"
+                data-item-description="Limitless Abundance in careers and business workshop"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop - Replay">
+                data-item-name="Limitless Abundance in careers and business workshop">
                 Get your ticket
             </button>
         </div>
@@ -204,12 +204,12 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
         </div>
         <div class="about-cta-btn">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#WS1"
+                data-item-id="#WS3"
                 data-item-price="15"
-                data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop - Replay"
+                data-item-url="/business-workshops/limitless-abundance"
+                data-item-description="Limitless Abundance in careers and business workshop"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop - Replay">
+                data-item-name="Limitless Abundance in careers and business workshop">
                 Get your ticket
             </button>
         </div>
@@ -249,12 +249,12 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
             </div>
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                    data-item-id="#WS1"
+                    data-item-id="#WS3"
                     data-item-price="15"
-                    data-item-url="/confidence-collective-workshop"
-                    data-item-description="Confidence Collective Workshop - Replay"
+                    data-item-url="/business-workshops/limitless-abundance"
+                    data-item-description="Limitless Abundance in careers and business workshop"
                     data-item-image=""
-                    data-item-name="Confidence Collective Workshop - Replay">
+                    data-item-name="Limitless Abundance in careers and business workshop">
                     Get your ticket
                 </button>
             </div>
@@ -292,14 +292,13 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
     <section class="stand-alone-cta-btn">
         <div class="about-cta-btn max-content-width">
             <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
-                data-item-id="#WS1"
+                data-item-id="#WS3"
                 data-item-price="15"
-                data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop - Replay"
+                data-item-url="/business-workshops/limitless-abundance"
+                data-item-description="Limitless Abundance in careers and business workshop"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop - Replay">
-                JOIN ME FOR THE LIMITLESS ABUNDANCE WORKSHOP 
+                data-item-name="Limitless Abundance in careers and business workshop">
+                JOIN ME FOR THE LIMITLESS ABUNDANCE WORKSHOP
             </button>
         </div>
     </section>
-
