Add send grid email template

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -11,7 +11,7 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
         <div class="parallax-container contact-hero-parallax-window"></div>
         <div class="right-hero-text">
             <h1 class="sect-title">LIMITLESS ABUNDANCE</h1>
-            <h2 class="sect-subtitle">In career and business with Mhairi Todd</h2>
+            <h2 class="sect-subtitle">In career and business</h2>
         </div>
     </section>
     <!-- END: parralex hero section -->
@@ -63,13 +63,13 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
     <section class="simple-section bg-gray">
         <div class="simple-section-text">
             <p class="normal-text">
-                What does the phrase ‘Limitless Abundance’ in your career or business conjure for you lovely?   
+                When you hear the word abundance in relation to your career or business, what does it conjure for you?
             </p>
             <p class="normal-text">
-                Perhaps it’s wealth or time freedom.  Or maybe it triggers self doubt and a ‘that’s not for people like me’ inner monologue. 
+                Maybe it’s lovely images of the ultimate time freedom or wealth.  Perhaps though it triggers a more negative narrative; self doubt and a ‘that’s not for people like me’ monologue.
             </p>
             <p class="normal-text">
-                Wherever you are at, the first step to creating limitless abundance in your career or business is getting crystal clear on 5 elements:
+                Wherever you are at, I’ve got you covered.  The first step towards abundance in your career or business is to get crystal clear on 5 non-negotiable’s:
             </p>
             <div class="intro-list">
                 <ul class="workshop-includes-list normal-text">
