--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -104,9 +104,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 data-item-id="#WS3"
                 data-item-price="15"
                 data-item-url="/business-workshops/limitless-abundance"
-                data-item-description="Limitless Abundance in careers and business workshop"
+                data-item-description="Limitless Abundance in Career and Business Workshop"
                 data-item-image=""
-                data-item-name="Limitless Abundance in careers and business workshop">
+                data-item-name="Limitless Abundance in Career and Business Workshop">
                 Get your ticket
             </button>
         </div>
@@ -207,9 +207,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 data-item-id="#WS3"
                 data-item-price="15"
                 data-item-url="/business-workshops/limitless-abundance"
-                data-item-description="Limitless Abundance in careers and business workshop"
+                data-item-description="Limitless Abundance in Career and Business Workshop"
                 data-item-image=""
-                data-item-name="Limitless Abundance in careers and business workshop">
+                data-item-name="Limitless Abundance in Career and Business Workshop">
                 Get your ticket
             </button>
         </div>
@@ -252,9 +252,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                     data-item-id="#WS3"
                     data-item-price="15"
                     data-item-url="/business-workshops/limitless-abundance"
-                    data-item-description="Limitless Abundance in careers and business workshop"
+                    data-item-description="Limitless Abundance in Career and Business Workshop"
                     data-item-image=""
-                    data-item-name="Limitless Abundance in careers and business workshop">
+                    data-item-name="Limitless Abundance in Career and Business Workshop">
                     Get your ticket
                 </button>
             </div>
@@ -295,9 +295,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 data-item-id="#WS3"
                 data-item-price="15"
                 data-item-url="/business-workshops/limitless-abundance"
-                data-item-description="Limitless Abundance in careers and business workshop"
+                data-item-description="Limitless Abundance in Career and Business Workshop"
                 data-item-image=""
-                data-item-name="Limitless Abundance in careers and business workshop">
+                data-item-name="Limitless Abundance in Career and Business Workshop">
                 JOIN ME FOR THE LIMITLESS ABUNDANCE WORKSHOP
             </button>
         </div>
